Correct spacing of textarea and survey field

--- a/style.css
+++ b/style.css
@@ -46,10 +46,6 @@ form {
     
 }
 
-.small-container {
-    padding: 1em;
-}
-
 
 h2 {
     text-align: center;
